Bug 622646 - Use a better error message when a |const| declaration shadows an exception identifier in a |catch| block.  r=jwalden

--HG--
extra : rebase_source : 37fcb6c2af529dbdf9be1ed0fbcfc24b31d7f17d